--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/morgan": "^1.7.35",
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-ts": "^6.0.0-beta.17",
     "nodemon": "^1.12.1",
