--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "sass": "^1.22.9"
   },
   "devDependencies": {
     "@types/body-parser": "1.16.8",
